2009-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcomplete.el (pcomplete-comint-setup): If there's a choice, replace
	shell-dynamic-complete-filename in preference to
	comint-dynamic-complete-filename.

	* bookmark.el (bookmark-insert-location, bookmark-bmenu-list)
	(bookmark-bmenu-show-filenames, bookmark-bmenu-hide-filenames):
	Don't consider whether the display supports colors.
	(bookmark-import-new-list): Use dolist.
	(bookmark-bmenu-mode-map): Move initialization into declaration.
	(bookmark-bmenu-list): Use dolist, simplify.
	(bookmark-show-all-annotations): Use save-selected-window and dolist.
	(menu-bar-final-items): Use push.

2009-10-28  Bernhard Herzog  <bernhard.herzog@intevation.de>  (tiny change)

	* vc-hg.el (vc-hg-state, vc-hg-working-revision): Use process-file so
	it works on remote files.
	(vc-hg-diff): Don't pass any `--cwd' argument.

2009-10-27  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/checkdoc.el (checkdoc-proper-noun-region-engine):
	Use help-xref-info-regexp and help-xref-url-regexp to identify links.
	(Further to Bug#3921).

2009-10-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-imap.el (top): Add `X-Size' to `imap-hash-headers'.
	(tramp-imap-do-copy-or-rename-file): Don't use the inode, when
	calling `tramp-imap-put-file'.  Add file size to the call.
	(tramp-imap-get-file-entries): Compute also user name, file size,
	and date.
	(tramp-imap-handle-insert-directory): Insert uid and gid.
	(tramp-imap-handle-file-attributes): Transform uid and gid
	according to `id-format'.
	(tramp-imap-put-file): New optional parameter SIZE.  Encode file
	size in header X-Size.

2009-10-26  Juanma Barranquero  <lekktu@gmail.com>

	* simple.el (transpose-subr): Give clearer error when the mark
	is not set.  (Bug#4807)

2009-10-26  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-perl-file-truename): New defconst.
	Perl code contributed by yary <not.com@gmail.com> (tiny change).